--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -75,25 +75,11 @@
   <span><h1 class="page-header">Boots</h1><a href="#" id="toggle-view" >Show as Grid</a></span>
 
   <div id="grid-view" class="row placeholders" style="display: none">
-  <%  @users.order('name ASC').each do |user| %>
-    <div class="col-xs-6 col-sm-3 placeholder mini-boot-show">
-    <a href="users/<%=user.id%>">
-      <img src="<%= user.profile_image %>" width="200" height="200" class="img-responsive" alt="profile image">
-      <h4><%= user.name %></h4>
-    </a>
-        <span class="text-muted"><%= user.cohorts.last.name %></span><br>
-        <% if user.country == 'US' %>
-          <span class="text-muted"><%= user.city %>, <%= user.state %></span><br>
-        <% else %>
-          <span class="text-muted"><%= user.city %>, <%= user.country %>
-        <% end %>
-    </div>
-  <% end %>
+    <%= render 'gridview' %>
   </div>
 
   <div id="map-view">
-    <div id="map">
-    </div>
+    <div id="map"></div>
   </div>
 
 </div>
